<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <!-- Untranslatable resources -->
    <string name="content_authority" translatable="false">com.chornsby.touristtracker</string>
    <string name="key_file_name" translatable="false">touristtracker.p12</string>
    <string name="map_file_name" translatable="false">helsinki.map</string>
    <string name="photo_subdirectory_path" translatable="false">/tourist_tracker</string>
    <string name="pref_track_location" translatable="false">pref_track</string>
    <string name="pref_uploading_data" translatable="false">pref_uploading_data</string>
    <string name="pref_applicant_id" translatable="false">pref_applicant_id</string>
    <string name="pref_tutorial_finished" translatable="false">pref_tutorial_finished</string>
    <string name="pref_notifications_set">pref_notifications_set</string>

    <!-- Permission details -->
    <string name="permission_track_location_label">tracked location</string>
    <string name="permission_track_location_description">
        Allows the app to track your location and store that information
        securely on your Android device.
    </string>

    <!-- Titles -->
    <string name="app_name">Tourist Tracker</string>
    <string name="title_activity_submit">Submit</string>
    <string name="title_activity_note_detail">Edit note</string>

    <!-- Tab labels -->
    <string name="tab_label_map">Map</string>
    <string name="tab_label_notes">Notes</string>
    <string name="tab_label_survey">Survey</string>

    <!-- Notifications -->
    <string name="notif_text_tracking">Currently tracking your location</string>
    <string name="notif_text_uploading">Uploading data</string>
    <string name="notif_text_upload_success">Data uploaded successfully</string>
    <string name="notif_text_upload_failure">Data upload failed</string>
    <string name="notif_tracking_started">Location tracking started</string>
    <string name="notif_tracking_stopped">Location tracking stopped</string>
    <string name="notif_copied_to_clipboard">Research number copied</string>
    <string name="notif_email_invalid">Email address invalid</string>
    <string name="notif_please_use_the_app">Please remember to use the app today!</string>

    <!-- Actions -->
    <string name="action_stop_tracking">Stop tracking</string>
    <string name="action_toggle_tracking">Toggle location tracking</string>
    <string name="action_add_note">Add note</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_submit_data">Submit data</string>
    <string name="action_upload">Upload</string>
    <string name="action_discard">Discard</string>
    <string name="action_display_help">Help</string>

    <!-- Notes -->
    <string name="label_add_note">Note</string>
    <string name="label_add_photo">Photo</string>
    <string name="hint_add_note">Write a note</string>
    <string name="note_saved">Note saved</string>
    <string name="no_notes_available">You haven\'t added any notes yet</string>
    <string name="no_notes_instructions_1">
        Please add a note and take a picture when you experience constraints or facilitators to
        tourism while in Helsinki.
    </string>
    <string name="no_notes_instructions_2">
        Add C if it is a constraint and F if it is a facilitator, P if you are using public transport
        and W if you are walking and explanation about the issue.
    </string>

    <!-- Submit -->
    <string name="label_submit_data">
        Confirm your email address and press the button to submit the collected data
    </string>
    <string name="confirm_data_upload">Are you ready to upload your location data?</string>
    <string name="confirm_data_upload_extra">Ensure you are connected to WIFI to avoid data charges</string>
    <string name="hint_add_email">Email address</string>
    <string name="survey_description">
        With this survey we would like to find out about your background and your experiences
        walking and using public transport as tourists. Please note that your answers are strictly
        confidential.
    </string>
    <string name="confirm_participation_lottery">I would like to participate in the lottery to win 100 € accommodation gift card</string>
    <string name="confirm_participation_tak">I would like my email to be shared for further research purposes with our partners (TAK Oy)</string>


    <!-- General -->
    <string name="internet_connection_required">
        You will need an internet connection to complete this part of the study.
    </string>

</resources>
