<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_toggle_tracking"
        android:icon="@drawable/ic_action_location_off"
        android:title="@string/action_toggle_tracking"
        android:orderInCategory="50"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_submit"
        android:icon="@drawable/ic_action_submit"
        android:title="@string/title_activity_submit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_launch_tutorial"
        android:title="@string/action_display_help"
        android:orderInCategory="150"
        app:showAsAction="never" />

</menu>
