<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chornsby.touristtracker.actionbar.fragments.SubmitFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/spacer_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_submit_data" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_margin"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/user_email_edit_text"
        android:hint="@string/hint_add_email"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_margin"
        android:text="@string/action_submit_data"
        android:id="@+id/button"
        android:layout_below="@id/user_email_edit_text"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
